minqi's edits added

--- a/docs/ipmi2017/fmri_bib.bib
+++ b/docs/ipmi2017/fmri_bib.bib
@@ -10,6 +10,16 @@
   pages     = {e0158504},
   publisher = {Public Library of Science},
 }
+@article{kabsch1976solution,
+  title={A solution for the best rotation to relate two sets of vectors},
+  author={Kabsch, Wolfgang},
+  journal={Acta Crystallographica Section A: Crystal Physics, Diffraction, Theoretical and General Crystallography},
+  volume={32},
+  number={5},
+  pages={922--923},
+  year={1976},
+  publisher={International Union of Crystallography}
+}
 @article{boutin2004reconstructing,
   title={On reconstructing n-point configurations from the distribution of distances or areas},
   author={Boutin, Mireille and Kemper, Gregor},
